tests/__snapshots__/validation-toBeInstantiableWith-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  35 | describe("argument for 'source'", () => {
  36 |   test("must be provided", () => {
  37 |     expect().type.toBeInstantiableWith<[never]>();
     |     ~~~~~~
  38 |   });
  39 | 
  40 |   test("must be a instantiable expression", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:37:5

Error: An argument for 'source' must be an instantiable expression.

  39 | 
  40 |   test("must be a instantiable expression", () => {
  41 |     expect("abc").type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  42 |     expect(123).type.toBeInstantiableWith<[never]>();
  43 |     expect(false).type.toBeInstantiableWith<[never]>();
  44 |     expect(undefined).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:41:12

Error: An argument for 'source' must be an instantiable expression.

  40 |   test("must be a instantiable expression", () => {
  41 |     expect("abc").type.toBeInstantiableWith<[never]>();
  42 |     expect(123).type.toBeInstantiableWith<[never]>();
     |            ~~~
  43 |     expect(false).type.toBeInstantiableWith<[never]>();
  44 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  45 |     expect(null).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:42:12

Error: An argument for 'source' must be an instantiable expression.

  41 |     expect("abc").type.toBeInstantiableWith<[never]>();
  42 |     expect(123).type.toBeInstantiableWith<[never]>();
  43 |     expect(false).type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  44 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  45 |     expect(null).type.toBeInstantiableWith<[never]>();
  46 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:43:12

Error: An argument for 'source' must be an instantiable expression.

  42 |     expect(123).type.toBeInstantiableWith<[never]>();
  43 |     expect(false).type.toBeInstantiableWith<[never]>();
  44 |     expect(undefined).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~
  45 |     expect(null).type.toBeInstantiableWith<[never]>();
  46 | 
  47 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:44:12

Error: An argument for 'source' must be an instantiable expression.

  43 |     expect(false).type.toBeInstantiableWith<[never]>();
  44 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  45 |     expect(null).type.toBeInstantiableWith<[never]>();
     |            ~~~~
  46 | 
  47 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
  48 |     expect(Person).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:45:12

Error: An argument for 'source' must be an instantiable expression.

  45 |     expect(null).type.toBeInstantiableWith<[never]>();
  46 | 
  47 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~~
  48 |     expect(Person).type.toBeInstantiableWith<[never]>();
  49 |   });
  50 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:47:12

Error: An argument for 'source' must be an instantiable expression.

  46 | 
  47 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
  48 |     expect(Person).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  49 |   });
  50 | 
  51 |   test("allowed expressions", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:48:12

Error: An argument for 'source' cannot be of the 'any' type.

The 'any' type was rejected because the 'rejectAnyType' option is enabled.
If this check is necessary, pass 'any' as the type argument explicitly.

  55 | 
  56 |   test("is rejected type?", () => {
  57 |     expect("abc" as any).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~
  58 |     expect("abc" as never).type.toBeInstantiableWith<[never]>();
  59 |   });
  60 | });

       at ./__typetests__/toBeInstantiableWith.tst.ts:57:12

Error: An argument for 'source' cannot be of the 'never' type.

The 'never' type was rejected because the 'rejectNeverType' option is enabled.
If this check is necessary, pass 'never' as the type argument explicitly.

  56 |   test("is rejected type?", () => {
  57 |     expect("abc" as any).type.toBeInstantiableWith<[never]>();
  58 |     expect("abc" as never).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~
  59 |   });
  60 | });
  61 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:58:12

Error: A type argument for 'Source' must be an instantiable type.

  62 | describe("type argument for 'Source'", () => {
  63 |   test("must be a instantiable type", () => {
  64 |     expect<string>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  65 |     expect<number>().type.toBeInstantiableWith<[never]>();
  66 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  67 |     expect<undefined>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:64:12

Error: A type argument for 'Source' must be an instantiable type.

  63 |   test("must be a instantiable type", () => {
  64 |     expect<string>().type.toBeInstantiableWith<[never]>();
  65 |     expect<number>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  66 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  67 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  68 |     expect<null>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:65:12

Error: A type argument for 'Source' must be an instantiable type.

  64 |     expect<string>().type.toBeInstantiableWith<[never]>();
  65 |     expect<number>().type.toBeInstantiableWith<[never]>();
  66 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~
  67 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  68 |     expect<null>().type.toBeInstantiableWith<[never]>();
  69 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:66:12

Error: A type argument for 'Source' must be an instantiable type.

  65 |     expect<number>().type.toBeInstantiableWith<[never]>();
  66 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  67 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~
  68 |     expect<null>().type.toBeInstantiableWith<[never]>();
  69 | 
  70 |     expect<() => void>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:67:12

Error: A type argument for 'Source' must be an instantiable type.

  66 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  67 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  68 |     expect<null>().type.toBeInstantiableWith<[never]>();
     |            ~~~~
  69 | 
  70 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
  71 |     expect<Func>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:68:12

Error: A type argument for 'Source' must be an instantiable type.

  68 |     expect<null>().type.toBeInstantiableWith<[never]>();
  69 | 
  70 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~
  71 |     expect<Func>().type.toBeInstantiableWith<[never]>();
  72 | 
  73 |     expect<Person>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:70:12

Error: A type argument for 'Source' must be an instantiable type.

  69 | 
  70 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
  71 |     expect<Func>().type.toBeInstantiableWith<[never]>();
     |            ~~~~
  72 | 
  73 |     expect<Person>().type.toBeInstantiableWith<[never]>();
  74 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:71:12

Error: A type argument for 'Source' must be an instantiable type.

  71 |     expect<Func>().type.toBeInstantiableWith<[never]>();
  72 | 
  73 |     expect<Person>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  74 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
  75 | 
  76 |     expect<None>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:73:12

Error: A type argument for 'Source' must be an instantiable type.

  72 | 
  73 |     expect<Person>().type.toBeInstantiableWith<[never]>();
  74 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~~~
  75 | 
  76 |     expect<None>().type.toBeInstantiableWith<[never]>();
  77 |   });

       at ./__typetests__/toBeInstantiableWith.tst.ts:74:12

Error: A type argument for 'Source' must be an instantiable type.

  74 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
  75 | 
  76 |     expect<None>().type.toBeInstantiableWith<[never]>();
     |            ~~~~
  77 |   });
  78 | 
  79 |   test("allowed expressions", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:76:12

Error: A type argument for 'Source' cannot be of the 'any' type.

The 'any' type was rejected because the 'rejectAnyType' option is enabled.
If this check is necessary, pass 'any' as the type argument explicitly.

  88 |     type Never = never;
  89 | 
  90 |     expect<Any>().type.toBeInstantiableWith<[never]>();
     |            ~~~
  91 |     expect<Never>().type.toBeInstantiableWith<[never]>();
  92 |   });
  93 | });

       at ./__typetests__/toBeInstantiableWith.tst.ts:90:12

Error: A type argument for 'Source' cannot be of the 'never' type.

The 'never' type was rejected because the 'rejectNeverType' option is enabled.
If this check is necessary, pass 'never' as the type argument explicitly.

  89 | 
  90 |     expect<Any>().type.toBeInstantiableWith<[never]>();
  91 |     expect<Never>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  92 |   });
  93 | });
  94 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:91:12

